Fixing small gap between sections

--- a/css/master.css
+++ b/css/master.css
@@ -205,7 +205,6 @@ body {
 /*********************************************************************************************/
 #form_section {
   background-color: #dff4f5;
-  margin-top: 60px;
   padding: 60px 0px; }
   #form_section h2 {
     color: #dff4f5; }
