--- a/sass/_form_section.scss
+++ b/sass/_form_section.scss
@@ -4,8 +4,7 @@
 
 #form_section {
 
-    background-color: $color-form-background;
-    margin-top: 60px;
+    background-color: $color-form-background;    
     padding: 60px 0px;
 
     h2 {
